--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ plugin-dependency-management = "1.1.7"
 plugin-spring-boot = "3.5.3"
 
 postgresql = "42.7.7"
+spring-doc = "2.8.9"
 
 [plugins]
 spring-boot = { id = "org.springframework.boot", version.ref = "plugin-spring-boot" }
@@ -17,6 +18,7 @@ spring-boot-starter = { group = "org.springframework.boot", name = "spring-boot-
 spring-boot-starter-jpa = { group = "org.springframework.boot", name = "spring-boot-starter-data-jpa" }
 spring-boot-starter-validation = { group = "org.springframework.boot", name = "spring-boot-starter-validation" }
 spring-boot-starter-web = { group = "org.springframework.boot", name = "spring-boot-starter-web" }
+spring-doc-open-api = { group = "org.springdoc", name = "springdoc-openapi-starter-webmvc-ui", version.ref = "spring-doc"}
 
 [bundles]
 database = [
@@ -29,5 +31,6 @@ spring = [
     "spring-boot-starter",
     "spring-boot-starter-jpa",
     "spring-boot-starter-validation",
-    "spring-boot-starter-web"
+    "spring-boot-starter-web",
+    "spring-doc-open-api"
 ]
