--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ dependencies {
     implementation(libs.bundles.database)
     implementation(libs.bundles.spring)
     implementation(libs.bundles.processor)
-    testImplementation(platform("org.junit:junit-bom:5.10.0"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
+    testImplementation(platform(libs.junit.bom))
+    testImplementation(libs.bundles.test)
 
     annotationProcessor(libs.processor.lombok)
 }
