--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,8 @@ plugin-spring-boot = "3.5.3"
 postgresql = "42.7.7"
 spring-doc = "2.8.9"
 
+junit-bom = "5.13.3"
+
 [plugins]
 spring-boot = { id = "org.springframework.boot", version.ref = "plugin-spring-boot" }
 spring-dependency-management = { id = "io.spring.dependency-management", version.ref = "plugin-dependency-management" }
@@ -18,7 +20,13 @@ spring-boot-starter = { group = "org.springframework.boot", name = "spring-boot-
 spring-boot-starter-jpa = { group = "org.springframework.boot", name = "spring-boot-starter-data-jpa" }
 spring-boot-starter-validation = { group = "org.springframework.boot", name = "spring-boot-starter-validation" }
 spring-boot-starter-web = { group = "org.springframework.boot", name = "spring-boot-starter-web" }
+spring-boot-starter-test = { group = "org.springframework.boot", name = "spring-boot-starter-test" }
 spring-doc-open-api = { group = "org.springdoc", name = "springdoc-openapi-starter-webmvc-ui", version.ref = "spring-doc"}
+
+junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit-bom"}
+junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter" }
+
+h2 = { group = "com.h2database", name = "h2"}
 
 [bundles]
 database = [
@@ -32,5 +40,10 @@ spring = [
     "spring-boot-starter-jpa",
     "spring-boot-starter-validation",
     "spring-boot-starter-web",
+    "spring-boot-starter-test",
     "spring-doc-open-api"
+]
+test = [
+    "junit-jupiter",
+    "h2"
 ]
