--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     implementation(libs.bundles.database)
     implementation(libs.bundles.spring)
     implementation(libs.bundles.processor)
-    testImplementation(platform(libs.junit.bom))
+    testImplementation(platform(libs.test.junit.bom))
     testImplementation(libs.bundles.test)
 
     annotationProcessor(libs.processor.lombok)
